--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,22 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
+# Compiled objects
 *.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
 *.exe
 *.out
-*.app
+weather
+
+# Generated files
+*.txt
+cmake_install.cmake
+Makefile
+build/*
+.cache/
+compile_commands.json
+
+# Project folders
+**/.idea
+**/CMakeFiles
+.vscode/*
+
+# Exceptions
+!.vscode/launch.json
+!CMakeLists.txt
