--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.14)
 project(weather)
 
+set(CMAKE_CXX_STANDARD 17)
+
 find_package(CURL REQUIRED)
 
 add_executable(weather weather.cpp)
