Exclude the Json hpp

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -53,5 +53,6 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_CLANG_FORMAT: true
+          FILTER_REGEX_EXCLUDE: .*/nlohmann/json.hpp
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
