--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ include(FetchContent)
 
 find_package(CURL REQUIRED)
 
+set(CMAKE_INSTALL_PREFIX "/usr/local")
+
 FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
 FetchContent_MakeAvailable(json)
 
@@ -16,3 +18,6 @@ add_executable(weather weather.cpp)
 
 target_link_libraries(weather PRIVATE CURL::libcurl)
 target_link_libraries(weather PRIVATE nlohmann_json::nlohmann_json)
+
+install(TARGETS weather
+	RUNTIME DESTINATION bin)
